--- a/giatakademik/index.html
+++ b/giatakademik/index.html
@@ -159,7 +159,7 @@
   </div>
 
     
-    <p>Dosen dan peneliti di bidang ekonomi terapan dan ekonometrika keuangan di <a href="https://fp.upm.ac.id">UPM</a>:</p>
+    <p>Peneliti dan pengampu beberapa mata kuliah yang berhubungan ekonomi dan manajemen terapan, keuangan dan ekonometrika:</p>
 <h4 id="mikroekonomi">Mikroekonomi</h4>
 <p>Mata kuliah pengantar bagi mahasiswa baru. Matakuliah ini memperkenalkan mahasiswa tentang mikroekonomi sebagai seni dan sains dalam menganalisis persoalan-persoalan ekonomi. <a href="https://bangtedy.github.io/mikroekonomi">Kontrak kuliah dan slides</a></p>
 <h4 id="makroekonomi">Makroekonomi</h4>
