--- a/404.html
+++ b/404.html
@@ -83,7 +83,7 @@
     </div>
   </div>
   <div class="nav_parent">
-    <a href="https://bangtedy.github.io/giatakademik/" class="nav_item" title="Giat Akademik">Giat Akademik </a>
+    <a href="https://bangtedy.github.io/giatakademika/" class="nav_item" title="Giat Akademika">Giat Akademika </a>
   </div>
       
       <div class="nav_parent">
@@ -190,7 +190,7 @@
 
 <footer class="footer">
   <div class="footer_inner wrap pale">
-    <img src='https://bangtedy.github.io/icons/apple-touch-icon.png' class="icon icon_2 transparent" alt="Merdeka Belajar">
+    <img src='https://bangtedy.github.io/icons/copy.svg' class="icon icon_2 transparent" alt="Merdeka Belajar">
     <p>Copyright&nbsp;<span class="year"></span>&nbsp;MERDEKA BELAJAR. All Rights Reserved</p><a class="to_top" href="#documentTop">
   <svg class="icon">
   <use xlink:href="#arrow"></use>
