--- a/pt/404.html
+++ b/pt/404.html
@@ -177,7 +177,7 @@
 
 <footer class="footer">
   <div class="footer_inner wrap pale">
-    <img src='https://bangtedy.github.io/icons/apple-touch-icon.png' class="icon icon_2 transparent" alt="">
+    <img src='https://bangtedy.github.io/icons/copy.svg' class="icon icon_2 transparent" alt="">
     <p>Copyright&nbsp;<span class="year"></span>&nbsp;. Todos os Direitos Reservados</p><a class="to_top" href="#documentTop">
   <svg class="icon">
   <use xlink:href="#arrow"></use>
