--- a/pt/index.html
+++ b/pt/index.html
@@ -20,13 +20,13 @@
 <meta property="og:locale:alternate" content="en" />
 
 <meta property="og:type" content="website">
-<meta name="description" content="">
+<meta name="description" content="content/_index.md">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:creator" content="@t_hlb">
 <meta name="twitter:title" content="" />
 <meta property="og:url" content="https://bangtedy.github.io/pt/" />
 <meta property="og:title" content="" />
-<meta property="og:description" content="" />
+<meta property="og:description" content="content/_index.md" />
 <meta property="og:image" content="https://bangtedy.github.io/images/thumbnail.png" />
 
 <link rel="apple-touch-icon" sizes="180x180" href="https://bangtedy.github.io/icons/apple-touch-icon.png">
@@ -187,11 +187,13 @@
   </ul>
 <aside class="sidebar">
   <section class="sidebar_inner">
-        <h2>Tedy Herlambang</h2>
+        <div class="author_header">
+          <img src="https://bangtedy.github.io/images/tedy.png" alt="Tedy Herlambang photo">
+          <h2>Tedy Herlambang</h2>
+        </div>
       <div class="author_bio">
-        Peneliti dan pengajar, perpetual student, continual incremental improvement.
+        Connecting the dots
       </div>
-      <a href='https://bangtedy.github.io/pt/about/' class="button mt-1" role="button" title='Ler Mais'>Ler Mais</a>
     <h2 class="mt-4">Principais Artigos</h2>
     <ul>
       <li>
@@ -333,7 +335,7 @@
 
 <footer class="footer">
   <div class="footer_inner wrap pale">
-    <img src='https://bangtedy.github.io/icons/apple-touch-icon.png' class="icon icon_2 transparent" alt="">
+    <img src='https://bangtedy.github.io/icons/copy.svg' class="icon icon_2 transparent" alt="">
     <p>Copyright&nbsp;<span class="year"></span>&nbsp;. Todos os Direitos Reservados</p><a class="to_top" href="#documentTop">
   <svg class="icon">
   <use xlink:href="#arrow"></use>
