--- a/about/index.html
+++ b/about/index.html
@@ -25,9 +25,8 @@
 
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="Saya mengampu beberapa mata kuliah yang berhubungan ekonomi dan manajemen terapan, keuangan dan ekonometrika:
-- Mikroekonomi - Makroekonomi - Sistem Ekonomi - Ekonometrika - Manajemen Risiko - Analisis Investasi - Kewirausahaan - Manajemen Pemasaran A minimal, responsive and light theme for Hugo inspired by Linux console.
-Installation $ mkdir themes$ cd themes$ git submodule add https://github.com/mrmierzejewski/hugo-theme-console.git hugo-theme-consoleSee the Hugo documentation for more information.
-Configuration Set theme parameter in your config file:"/>
+- Mikroekonomi - Makroekonomi - Sistem Ekonomi - Ekonometrika - Manajemen Risiko - Analisis Investasi - Kewirausahaan - Manajemen Pemasaran License Copyright © 2020 Tedy Herlambang
+The theme is released under the MIT License. Check the original theme license for additional licensing information."/>
 
 </head>
 <body class="terminal">
@@ -65,17 +64,7 @@ Configuration Set theme parameter in your config file:"/>
 <h4 id="--analisis-investasihttpsbangtedygithubioanalisisinvestasiindex">- <a href="https://bangtedy.github.io/analisisinvestasi/index">Analisis Investasi</a></h4>
 <h4 id="--kewirausahaanhttpsbangtedygithubiokewirausahaanindex">- <a href="https://bangtedy.github.io/kewirausahaan/index">Kewirausahaan</a></h4>
 <h4 id="--manajemen-pemasaranhttpsbangtedygithubiomanajemenpemasaranindex">- <a href="https://bangtedy.github.io/manajemenpemasaran/index">Manajemen Pemasaran</a></h4>
-<p>A minimal, responsive and light theme for Hugo inspired by Linux console.</p>
-<p><img src="https://github.com/mrmierzejewski/hugo-theme-console/blob/master/images/preview.png?raw=true" alt="Console"></p>
-<h2 id="installation">Installation</h2>
-<pre tabindex="0"><code>$ mkdir themes
-$ cd themes
-$ git submodule add https://github.com/mrmierzejewski/hugo-theme-console.git hugo-theme-console
-</code></pre><p>See the <a href="https://gohugo.io/themes/installing/">Hugo documentation</a> for more information.</p>
-<h2 id="configuration">Configuration</h2>
-<p>Set theme parameter in your config file:</p>
-<pre tabindex="0"><code>theme = &quot;hugo-theme-console&quot;
-</code></pre><h2 id="license">License</h2>
+<h2 id="license">License</h2>
 <p>Copyright © 2020 Tedy Herlambang</p>
 <p>The theme is released under the MIT License. Check the <a href="https://github.com/panr/hugo-theme-terminal/blob/master/LICENSE.md">original theme license</a> for additional licensing information.</p>
 
