add link for books

--- a/about/index.html
+++ b/about/index.html
@@ -24,8 +24,10 @@
 
 
 <meta name="twitter:title" content="About"/>
-<meta name="twitter:description" content="Saya mengampu beberapa mata kuliah yang berhubungan ekonomi dan manajemen terapan, keuangan dan ekonometrika:
-- Mikroekonomi - Makroekonomi - Sistem Ekonomi - Ekonometrika - Manajemen Risiko - Analisis Investasi - Kewirausahaan - Manajemen Pemasaran License Copyright © 2020 Tedy Herlambang
+<meta name="twitter:description" content="Saya mengampu beberapa mata kuliah yang berhubungan ekonomi dan manajemen terapan, keuangan dan ekonometrika.
+Beberapa buku yang sedang saya tulis antara lain:
+ Analisis Faktor Analisis Regresi  Presentation slides:
+ Mikroekonomi Makroekonomi Sistem Ekonomi Ekonometrika Manajemen Risiko Analisis Investasi Manajemen Pemasaran  License Copyright © 2020 Tedy Herlambang
 The theme is released under the MIT License. Check the original theme license for additional licensing information."/>
 
 </head>
@@ -55,15 +57,22 @@ The theme is released under the MIT License. Check the original theme license fo
     <div class="container animated zoomIn fast" >
         
 <h1>About</h1>
-<p>Saya mengampu beberapa mata kuliah yang berhubungan ekonomi dan manajemen terapan, keuangan dan ekonometrika:</p>
-<h4 id="--mikroekonomihttpsbangtedygithubiomikroekonomiindex">- <a href="https://bangtedy.github.io/mikroekonomi/index">Mikroekonomi</a></h4>
-<h4 id="--makroekonomihttpsbangtedygithubiomakroekonomiindex">- <a href="https://bangtedy.github.io/makroekonomi/index">Makroekonomi</a></h4>
-<h4 id="--sistem-ekonomihttpsbangtedygithubiosistemekonomiindex">- <a href="https://bangtedy.github.io/sistemekonomi/index">Sistem Ekonomi</a></h4>
-<h4 id="--ekonometrikahttpsbangtedygithubioekonometrikaindex">- <a href="https://bangtedy.github.io/ekonometrika/index">Ekonometrika</a></h4>
-<h4 id="--manajemen-risikohttpsbangtedygithubiomanajemenrisikoindex">- <a href="https://bangtedy.github.io/manajemenrisiko/index">Manajemen Risiko</a></h4>
-<h4 id="--analisis-investasihttpsbangtedygithubioanalisisinvestasiindex">- <a href="https://bangtedy.github.io/analisisinvestasi/index">Analisis Investasi</a></h4>
-<h4 id="--kewirausahaanhttpsbangtedygithubiokewirausahaanindex">- <a href="https://bangtedy.github.io/kewirausahaan/index">Kewirausahaan</a></h4>
-<h4 id="--manajemen-pemasaranhttpsbangtedygithubiomanajemenpemasaranindex">- <a href="https://bangtedy.github.io/manajemenpemasaran/index">Manajemen Pemasaran</a></h4>
+<p>Saya mengampu beberapa mata kuliah yang berhubungan ekonomi dan manajemen terapan, keuangan dan ekonometrika.</p>
+<p>Beberapa buku yang sedang saya tulis antara lain:</p>
+<ul>
+<li><a href="https://bangtedy.github.io/analisisfaktor/index">Analisis Faktor</a></li>
+<li><a href="https://bangtedy.github.io/analisisregresi/index">Analisis Regresi</a></li>
+</ul>
+<p>Presentation slides:</p>
+<ul>
+<li><a href="https://bangtedy.github.io/mikroekonomi/index">Mikroekonomi</a></li>
+<li><a href="https://bangtedy.github.io/makroekonomi/index">Makroekonomi</a></li>
+<li><a href="https://bangtedy.github.io/sistemekonomi/index">Sistem Ekonomi</a></li>
+<li><a href="https://bangtedy.github.io/ekonometrika/index">Ekonometrika</a></li>
+<li><a href="https://bangtedy.github.io/manajemenrisiko/index">Manajemen Risiko</a></li>
+<li><a href="https://bangtedy.github.io/analisisinvestasi/index">Analisis Investasi</a></li>
+<li><a href="https://bangtedy.github.io/manajemenpemasaran/index">Manajemen Pemasaran</a></li>
+</ul>
 <h2 id="license">License</h2>
 <p>Copyright © 2020 Tedy Herlambang</p>
 <p>The theme is released under the MIT License. Check the <a href="https://github.com/panr/hugo-theme-terminal/blob/master/LICENSE.md">original theme license</a> for additional licensing information.</p>
