update about me

--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
 
 <meta name="twitter:title" content="About"/>
 <meta name="twitter:description" content="Saya mengampu beberapa mata kuliah yang berhubungan ekonomi dan manajemen terapan, keuangan dan ekonometrika.
-Beberapa buku yang sedang saya tulis antara lain:
+Buku-buku yang sedang saya tulis antara lain:
  Analisis Faktor Analisis Regresi  Presentation slides:
  Mikroekonomi Makroekonomi Sistem Ekonomi Ekonometrika Manajemen Risiko Analisis Investasi Manajemen Pemasaran  License Copyright © 2020 Tedy Herlambang
 The theme is released under the MIT License. Check the original theme license for additional licensing information."/>
@@ -58,7 +58,7 @@ The theme is released under the MIT License. Check the original theme license fo
         
 <h1>About</h1>
 <p>Saya mengampu beberapa mata kuliah yang berhubungan ekonomi dan manajemen terapan, keuangan dan ekonometrika.</p>
-<p>Beberapa buku yang sedang saya tulis antara lain:</p>
+<p>Buku-buku yang sedang saya tulis antara lain:</p>
 <ul>
 <li><a href="https://bangtedy.github.io/analisisfaktor/index">Analisis Faktor</a></li>
 <li><a href="https://bangtedy.github.io/analisisregresi/index">Analisis Regresi</a></li>
