--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <h1>About me</h1>
 
 <p>
-Mengampu beberapa mata kuliah yang berhubungan ekonomi dan manajemen terapan, keuangan dan ekonometrika.  <a href="about/">(more)</a>
+Data asli di lapang rantak: salah ketik, kehapus/hilang, nilai tidak masuk akal,dll.   <a href="about/">(more)</a>
 </p>
 <br/>
 
