--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container animated zoomIn fast" >
         
 
-<h1>About me</h1>
+<h1>Giat Akademik</h1>
 
 <p>
 Data asli di lapang rantak: salah ketik, kehapus/hilang, nilai tidak masuk akal,dll.   <a href="about/">(more)</a>
