delete example posts

--- a/about/index.html
+++ b/about/index.html
@@ -27,8 +27,7 @@
 <meta name="twitter:description" content="Saya mengampu beberapa mata kuliah yang berhubungan ekonomi dan manajemen terapan, keuangan dan ekonometrika.
 Buku-buku yang sedang saya tulis antara lain:
  Analisis Faktor Analisis Regresi  Presentation slides:
- Mikroekonomi Makroekonomi Sistem Ekonomi Ekonometrika Manajemen Risiko Analisis Investasi Manajemen Pemasaran  License Copyright © 2020 Tedy Herlambang
-The theme is released under the MIT License. Check the original theme license for additional licensing information."/>
+ Mikroekonomi Makroekonomi Sistem Ekonomi Ekonometrika Manajemen Risiko Analisis Investasi Manajemen Pemasaran  License Copyright © 2021 Tedy Herlambang"/>
 
 </head>
 <body class="terminal">
@@ -74,8 +73,7 @@ The theme is released under the MIT License. Check the original theme license fo
 <li><a href="https://bangtedy.github.io/manajemenpemasaran/index">Manajemen Pemasaran</a></li>
 </ul>
 <h2 id="license">License</h2>
-<p>Copyright © 2020 Tedy Herlambang</p>
-<p>The theme is released under the MIT License. Check the <a href="https://github.com/panr/hugo-theme-terminal/blob/master/LICENSE.md">original theme license</a> for additional licensing information.</p>
+<p>Copyright © 2021 Tedy Herlambang</p>
 
 
         <div class="footer">
