--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
 
 <meta property="og:title" content="TH" />
 <meta property="og:description" content="What&rsquo;s the fastest way to provide value to someone else?">
+<meta property="og:image" content="https://bangtedy.github.io/img/66439.png" />
 <meta property="og:url" content="https://bangtedy.github.io/" />
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="TH" />
 
   <meta name="twitter:title" content="TH" />
   <meta name="twitter:description" content="What&rsquo;s the fastest way to provide value to someone else?">
+  <meta name="twitter:image" content="https://bangtedy.github.io/img/66439.png" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@t_hlb" />
   <meta name="twitter:creator" content="@t_hlb" />
@@ -94,6 +96,14 @@
       </ul>
     </div>
 
+    
+      <div class="avatar-container">
+        <div class="avatar-img-border">
+          <a title="TH" href="https://bangtedy.github.io">
+            <img class="avatar-img" src="https://bangtedy.github.io/img/66439.png" alt="TH" />
+          </a>
+        </div>
+      </div>
     
 
   </div>
