--- a/en/showcase/index.html
+++ b/en/showcase/index.html
@@ -1791,7 +1791,7 @@
           </li>
         
           <li class="showcase__box" data-dir="ltr">
-            <a href="https://wagribisnis.netlify.app/" class="showcase__box--link" target="_blank" rel="noreferrer"></a>
+            <a href="https://wabis.netlify.app/" class="showcase__box--link" target="_blank" rel="noreferrer"></a>
             <span class="showcase__box--title">
               Wawasan Agribisnis
             </span>
