--- a/_posts/penyalur-kebaikan/penyalur-kebaikan.html
+++ b/_posts/penyalur-kebaikan/penyalur-kebaikan.html
@@ -1600,11 +1600,9 @@ yang lebih tinggi? Terutama aset no 1,2 dan 3? Apakah kita ikut
 menyalurkan kejujuran, toleransi, keperdulian dan ketaqwaan ke
 sekeliling kita?</p>
 <!-- AddToAny BEGIN -->
-<div
-class="a2a_kit a2a_kit_size_16 a2a_floating_style a2a_vertical_style"
-style="right:0px">
-<p><a class="a2a_button_whatsapp"></a>
-<a class="a2a_button_telegram"></a></p>
+<div class="a2a_kit a2a_kit_size_16 a2a_floating_style a2a_vertical_style" style="right:0px; top:150px; data-a2a-url="https://bangtedy.github.io/" data-a2a-title="Penyalur Kebaikan">
+<a class="a2a_button_whatsapp"></a>
+<a class="a2a_button_telegram"></a>
 </div>
 <script async src="https://static.addtoany.com/menu/page.js"></script>
 <!-- AddToAny END -->
